--- a/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
+++ b/A1 GAESTION COMMERCIAL/A1 GAESTION COMMERCIAL.vbproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
@@ -267,6 +268,12 @@
     <Compile Include="Controles\PV\pvOpenBon_item.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Controles\PV\pvPaiement_Form.Designer.vb">
+      <DependentUpon>pvPaiement_Form.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Controles\PV\pvPaiement_Form.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Controles\PV\RPanel.Designer.vb">
       <DependentUpon>RPanel.vb</DependentUpon>
     </Compile>
@@ -458,6 +465,12 @@
       <DependentUpon>Liste_Avoir.vb</DependentUpon>
     </Compile>
     <Compile Include="GUI\Liste_Avoir.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\ListMultiCodes.Designer.vb">
+      <DependentUpon>ListMultiCodes.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\ListMultiCodes.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\ModePayement.Designer.vb">
@@ -652,6 +665,9 @@
     <EmbeddedResource Include="Controles\PV\pvOpenBon_item.resx">
       <DependentUpon>pvOpenBon_item.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controles\PV\pvPaiement_Form.resx">
+      <DependentUpon>pvPaiement_Form.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controles\PV\RPanel.resx">
       <DependentUpon>RPanel.vb</DependentUpon>
     </EmbeddedResource>
@@ -745,6 +761,9 @@
     <EmbeddedResource Include="GUI\Liste_Avoir.resx">
       <DependentUpon>Liste_Avoir.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ListMultiCodes.resx">
+      <DependentUpon>ListMultiCodes.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\ModePayement.resx">
       <DependentUpon>ModePayement.vb</DependentUpon>
     </EmbeddedResource>
@@ -830,7 +849,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ALMohassinDB.mdb">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="Resources\close40.png" />
     <None Include="Resources\234339-200.png" />
